--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:divider="?android:attr/dividerHorizontal"
-    android:showDividers="middle"
-    tools:context="com.example.android.sunshine.app.MainActivity">
-    
-    <fragment
-        android:id="@+id/fragment_forecast"
-        android:layout_width="0dp"
+    android:layout_width="match_parent" >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:name="com.example.android.sunshine.app.ForecastFragment"
-        tools:layout="@android:layout/list_content"/>
+        android:baselineAligned="false"
+        android:divider="?android:attr/dividerHorizontal"
+        android:showDividers="middle"
+        tools:context="com.example.android.sunshine.app.MainActivity" >
 
-    <FrameLayout
-        android:id="@+id/weather_detail_container"
-        android:layout_width="0dp"
+        <fragment
+            android:id="@+id/fragment_forecast"
+            android:layout_margin="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:name="com.example.android.sunshine.app.ForecastFragment"
+            tools:layout="@android:layout/list_content"/>
+
+        <FrameLayout
+            android:id="@+id/weather_detail_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_weight="4" />
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:background="?android:attr/colorBackground" />
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
