--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,15 +6,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_day_textview"/>
+            android:id="@+id/detail_day_textview"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="?android:attr/textColorPrimary"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_date_textview" />
+            android:id="@+id/detail_date_textview"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-condensed" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,6 +30,8 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:layout_marginTop="16dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginBottom="16dp"
             android:baselineAligned="false">
             <LinearLayout
                 android:layout_width="0dp"
@@ -31,11 +41,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/detail_high_textview" />
+                    android:id="@+id/detail_high_textview"
+                    android:textSize="96sp"
+                    android:fontFamily="sans-serif-light"
+                    android:textColor="?android:attr/textColorPrimary"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/detail_low_textview" />
+                    android:id="@+id/detail_low_textview"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="48sp"
+                    android:fontFamily="sans-serif-light" />
 
             </LinearLayout>
             <LinearLayout
@@ -51,22 +67,37 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/detail_forecast_textview" />
+                    android:id="@+id/detail_forecast_textview"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textColor="?android:attr/textColorSecondary" />
             </LinearLayout>
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_humidity_textview" />
+            android:id="@+id/detail_humidity_textview"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginBottom="4dp"
+            android:textColor="?android:attr/textColorSecondary" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_wind_textview" />
+            android:id="@+id/detail_wind_textview"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginBottom="4dp"
+            android:textColor="?android:attr/textColorSecondary" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_pressure_textview" />
+            android:id="@+id/detail_pressure_textview"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginBottom="4dp"
+            android:textColor="?android:attr/textColorSecondary" />
 
     </LinearLayout>
 </ScrollView>
